--- a/skeletons/util-core/Makefile.win
+++ b/skeletons/util-core/Makefile.win
@@ -8,7 +8,7 @@ WINDRES = windres.exe
 MINGW =
 RES  = 
 OBJ  = SingleInstanceManager.o Process.o Log.o Thread.o FileUtils.o StringUtils.o DebugConsole.o $(RES)
-LIBS =  -static-libgcc -L"$(MINGW)/lib"
+LIBS =  $(CUSTOMLIBFLAGS) -static-libgcc -L"$(MINGW)/lib"
 INCS =  -I"$(MINGW)/include"  -I"$(JDK)/include"  -I"$(JDK)/include/win32" 
 CXXINCS = -Os  -I"$(MINGW)/include/c++"  -I"$(MINGW)/include/c++/mingw32"  -I"$(MINGW)/include/c++/backward"  -I"$(MINGW)/include"  -I"$(JDK)/include"  -I"$(JDK)/include/win32" 
 BIN  = $(PROJECTNAME).a
