--- a/skeletons/winservice/Makefile.win
+++ b/skeletons/winservice/Makefile.win
@@ -9,7 +9,7 @@ WINDRES = windres.exe
 RES  = winservice_private.res
 OBJ  = main.o $(RES)
 LINKOBJ  = WinService.o main.o $(RES)
-LIBS =  -static-libgcc -L"${MINGW}/lib" -L"../commonjava" -L"../util-core" ../commonjava/CommonJava.a ../util-core/util-core.a 
+LIBS =  $(CUSTOMLIBFLAGS) -static-libgcc -L"${MINGW}/lib" -L"../commonjava" -L"../util-core" ../commonjava/CommonJava.a ../util-core/util-core.a 
 INCS =  -I"/include" -I"../util-core"  -I"../commonjava"  -I"$(JDK)/include"  -I"$(JDK)/include/win32" 
 CXXINCS = -I"$(MINGW)/include/c++"  -I"$(MINGW)/include/c++/mingw32"  -I"$(MINGW)/include/c++/backward"  -I"$(MINGW)/include"  -I"$(JDK)/include"  -I"$(JDK)/include/win32" -I"../commonjava" -I"../util-core" -I"../util-net" $(FLTK-CXXFLAGS)
 BIN  = winservice.exe
