- Legacy files removed - Updated Java libraries - Cleanup and simplify some things in build.xml

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 classes
 *.jar
 !/lib/**/*.jar
+!/lib/*.jar
 dist
 tmp
 *.class
 /skeletons/**/*.o
 /skeletons/**/*.a
 /skeletons/**/*.res
+/docs/*.fo
+/docs/*.html
+/docs/*.pdf
